Conditional rendering test

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <h1>Hello, vue</h1>
+    
+    <div id="app">
+        <div v-if="showBooks">
+           <p>{{ title }} - {{ author }} - {{ age }}</p> 
+        </div>
+
+        <button @click = "toggleShowBooks">
+            <span v-if="showBooks">Hide Books</span>
+            <span v-else>Show Books</span>
+        </button>
+
+        <div v-show="showBooks">Currently showing books</div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
